# trading-spike

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tasks.md
.github/workflows/: test.yml
scripts/: test_alpaca_connection.py  validate_strategy.py
src/backtest_mcp/: __init__.py  server.py  strategy.py
src/execution/: __init__.py  alpaca_client.py  market_hours.py  models.py  simulated_ledger.py
tests/: conftest.py  test_backtest.py  test_execution.py  test_market_hours.py  test_simulated_ledger.py  test_strategy_validation.py
