[project]
name = "trading-spike"
version = "0.1.0"
description = "LLM-orchestrated autonomous trading system with MCP servers and VectorBT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.0.0",
    "python-dotenv>=1.2.1",
    "vectorbt>=0.28.4",
    "yfinance>=0.2.0",
]

[project.scripts]
backtest-mcp = "backtest_mcp.server:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=src --cov-report=term-missing"
validate = "python scripts/validate_strategy.py"
